test/cases/compile_errors/zon/vec2.zon
.{ .x = 1.5, .y = 2 }
